force-app/main/default/objects/LPOE_Space_Plan__c/LPOE_Space_Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>LPOE Space Plan</description>
    <label>LPOE Space Plan</label>
    <nameField>
        <displayFormat>LPOE-{0000}</displayFormat>
        <label>LPOE Space Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LPOE Space Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>