force-app/main/default/objects/LPOE_Space_Plan__c/fields/Acreage_Default__c.field-meta.xml
<CustomField>
    <fullName>Acreage_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Acreage Default</description>
    <inlineHelpText>Acreage Default</inlineHelpText>
    <label>POV Acreage Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>