force-app/main/default/objects/LPOE_Space_Plan__c/fields/Aviary_Holding__c.field-meta.xml
<CustomField>
    <fullName>Aviary_Holding__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Aviary Holding</description>
    <inlineHelpText>Aviary Holding</inlineHelpText>
    <label>Aviary Holding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>