force-app/main/default/objects/LPOE_Space_Plan__c/fields/Bird_Quarantine__c.field-meta.xml
<CustomField>
    <fullName>Bird_Quarantine__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Bird Quarantine</description>
    <inlineHelpText>Bird Quarantine</inlineHelpText>
    <label>Bird Quarantine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>