force-app/main/default/objects/LPOE_Space_Plan__c/fields/Bus_Drop_Off__c.field-meta.xml
<CustomField>
    <fullName>Bus_Drop_Off__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Bus Drop Off</description>
    <inlineHelpText>Bus Drop Off</inlineHelpText>
    <label>Bus Drop Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>