force-app/main/default/objects/LPOE_Space_Plan__c/fields/Central_Plant__c.field-meta.xml
<CustomField>
    <fullName>Central_Plant__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Central Plant</description>
    <inlineHelpText>Central Plant</inlineHelpText>
    <label>Central Plant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>