force-app/main/default/objects/LPOE_Space_Plan__c/fields/Central_Plant_Default__c.field-meta.xml
<CustomField>
    <fullName>Central_Plant_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Central Plant Default</description>
    <inlineHelpText>Central Plant Default</inlineHelpText>
    <label>Central Plant Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>