force-app/main/default/objects/LPOE_Space_Plan__c/fields/Comm_Core_Area__c.field-meta.xml
<CustomField>
    <fullName>Comm_Core_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Core Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>