force-app/main/default/objects/LPOE_Space_Plan__c/fields/Comm_Hazmat_Lane_Default__c.field-meta.xml
<CustomField>
    <fullName>Comm_Hazmat_Lane_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hazmat Lane Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>