force-app/main/default/objects/LPOE_Space_Plan__c/fields/Comm_Inbound_Truck_Scale__c.field-meta.xml
<CustomField>
    <fullName>Comm_Inbound_Truck_Scale__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inbound Truck Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>