force-app/main/default/objects/LPOE_Space_Plan__c/fields/comm_Inbound_Truck_Scale_Default__c.field-meta.xml
<CustomField>
    <fullName>comm_Inbound_Truck_Scale_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inbound Truck Scale Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>