force-app/main/default/objects/LPOE_Space_Plan__c/fields/Comm_Number_of_Lanes__c.field-meta.xml
<CustomField>
    <fullName>Comm_Number_of_Lanes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Comm. Number of Lanes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>