force-app/main/default/objects/LPOE_Space_Plan__c/fields/Comm_Outbound_Exit_Booth__c.field-meta.xml
<CustomField>
    <fullName>Comm_Outbound_Exit_Booth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outbound Exit Booth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>