force-app/main/default/objects/LPOE_Space_Plan__c/fields/Comm_Primary_roadways__c.field-meta.xml
<CustomField>
    <fullName>Comm_Primary_roadways__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Primary roadways</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>