force-app/main/default/objects/LPOE_Space_Plan__c/fields/Commercial_elements_Default__c.field-meta.xml
<CustomField>
    <fullName>Commercial_elements_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commercial elements Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>