force-app/main/default/objects/LPOE_Space_Plan__c/fields/Commercial_FMCSA_Default__c.field-meta.xml
<CustomField>
    <fullName>Commercial_FMCSA_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Commercial FMCSA</description>
    <inlineHelpText>Commercial FMCSA</inlineHelpText>
    <label>Commercial FMCSA Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>