force-app/main/default/objects/LPOE_Space_Plan__c/fields/Commercial_Plant_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Plant_Inspection__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Commercial Plant Inspection</description>
    <inlineHelpText>Commercial Plant Inspection</inlineHelpText>
    <label>Commercial Plant Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>