force-app/main/default/objects/LPOE_Space_Plan__c/fields/Commercial_Port_Size__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Port_Size__c</fullName>
    <formula>TEXT(Project_Name__r.Commercial_Port_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Port Size</label>
    <type>Text</type>
</CustomField>