force-app/main/default/objects/LPOE_Space_Plan__c/fields/Garage_Default__c.field-meta.xml
<CustomField>
    <fullName>Garage_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Garage Default</description>
    <inlineHelpText>Garage Default</inlineHelpText>
    <label>Garage Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>