force-app/main/default/objects/LPOE_Space_Plan__c/fields/Hazmat_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Inspection__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Hazmat Inspection</description>
    <inlineHelpText>Hazmat Inspection</inlineHelpText>
    <label>Hazmat Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>