force-app/main/default/objects/LPOE_Space_Plan__c/fields/Hazmat_Inspection_Default__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Inspection_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Hazmat Inspection Default</description>
    <inlineHelpText>Hazmat Inspection Default</inlineHelpText>
    <label>Hazmat Inspection Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>