force-app/main/default/objects/LPOE_Space_Plan__c/fields/Inbound_Auto_Inspection_Default__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Auto_Inspection_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Inbound Auto Inspection Default</description>
    <inlineHelpText>Inbound Auto Inspection Default</inlineHelpText>
    <label>Inbound Auto Inspection Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>