force-app/main/default/objects/LPOE_Space_Plan__c/fields/Inbound_Booth__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Booth__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Inbound Booth</description>
    <inlineHelpText>Inbound Booth</inlineHelpText>
    <label>Inbound Booth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>