force-app/main/default/objects/LPOE_Space_Plan__c/fields/Inbound_Booth_Default__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Booth_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Inbound Booth Default</description>
    <inlineHelpText>Inbound Booth Default</inlineHelpText>
    <label>Inbound Booth Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>