force-app/main/default/objects/LPOE_Space_Plan__c/fields/Inbound_Bypass_Lane__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Bypass_Lane__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Inbound Bypass Lane</description>
    <inlineHelpText>Inbound Bypass Lane</inlineHelpText>
    <label>Inbound Bypass Lane</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>