force-app/main/default/objects/LPOE_Space_Plan__c/fields/Inbound_Exit_Booth__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Exit_Booth__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Inbound Exit Booth</description>
    <inlineHelpText>Inbound Exit Booth</inlineHelpText>
    <label>Inbound Exit Booth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>