force-app/main/default/objects/LPOE_Space_Plan__c/fields/Inbound_Inspection_Lane_Default__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Inspection_Lane_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Inbound Inspection Lane Default</description>
    <inlineHelpText>Inbound Inspection Lane Default</inlineHelpText>
    <label>Inbound Inspection Lane Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>