force-app/main/default/objects/LPOE_Space_Plan__c/fields/Kennel_Default__c.field-meta.xml
<CustomField>
    <fullName>Kennel_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Kennel Default</description>
    <inlineHelpText>Kennel Default</inlineHelpText>
    <label>Kennel Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>