force-app/main/default/objects/LPOE_Space_Plan__c/fields/Large_Inbound_Booth_Default__c.field-meta.xml
<CustomField>
    <fullName>Large_Inbound_Booth_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Large Inbound Booth Default</description>
    <inlineHelpText>Large Inbound Booth Default</inlineHelpText>
    <label>Large Inbound Booth Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>