force-app/main/default/objects/LPOE_Space_Plan__c/fields/Large_Inbound_Inspection_Lane__c.field-meta.xml
<CustomField>
    <fullName>Large_Inbound_Inspection_Lane__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Large Inbound Inspection Lane</description>
    <inlineHelpText>Large Inbound Inspection Lane</inlineHelpText>
    <label>Large Inbound Inspection Lane</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>