force-app/main/default/objects/LPOE_Space_Plan__c/fields/Main_Building__c.field-meta.xml
<CustomField>
    <fullName>Main_Building__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Office Buildings - Main Building</description>
    <inlineHelpText>Office Buildings - Main Building</inlineHelpText>
    <label>Main Building</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>