force-app/main/default/objects/LPOE_Space_Plan__c/fields/Maintenance_Default__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maintenance Default</description>
    <inlineHelpText>Maintenance Default</inlineHelpText>
    <label>Maintenance Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>