force-app/main/default/objects/LPOE_Space_Plan__c/fields/Number_of_Lanes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lanes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Lanes</description>
    <inlineHelpText>Number of Lanes</inlineHelpText>
    <label>POV Number of Lanes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>