force-app/main/default/objects/LPOE_Space_Plan__c/fields/Outbound_Auto_Inspection_Default__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Auto_Inspection_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Outbound Auto Inspection Default</description>
    <inlineHelpText>Outbound Auto Inspection Default</inlineHelpText>
    <label>Outbound Auto Inspection Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>