force-app/main/default/objects/LPOE_Space_Plan__c/fields/Outbound_Booth__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Booth__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Outbound Booth</description>
    <inlineHelpText>Outbound Booth</inlineHelpText>
    <label>Outbound Booth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>