force-app/main/default/objects/LPOE_Space_Plan__c/fields/Outbound_Bypass_Lane_Default__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Bypass_Lane_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Outbound Bypass Lane Default</description>
    <inlineHelpText>Outbound Bypass Lane Default</inlineHelpText>
    <label>Outbound Bypass Lane Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>