force-app/main/default/objects/LPOE_Space_Plan__c/fields/Outbound_Exit_Booth_Default__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Exit_Booth_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Outbound Exit Booth Default</description>
    <inlineHelpText>Outbound Exit Booth Default</inlineHelpText>
    <label>Outbound Exit Booth Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>