force-app/main/default/objects/LPOE_Space_Plan__c/fields/Outbound_Inspection_Lane__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Inspection_Lane__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Outbound Inspection Lane</description>
    <inlineHelpText>Outbound Inspection Lane</inlineHelpText>
    <label>Outbound Inspection Lane</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>