force-app/main/default/objects/LPOE_Space_Plan__c/fields/Outbound_Secondary_Inspection_Default__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Secondary_Inspection_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Outbound Secondary Inspection Default</description>
    <inlineHelpText>Outbound Secondary Inspection Default</inlineHelpText>
    <label>Outbound Secondary Inspection Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>