force-app/main/default/objects/LPOE_Space_Plan__c/fields/Paving__c.field-meta.xml
<CustomField>
    <fullName>Paving__c</fullName>
    <defaultValue>0</defaultValue>
    <label>POV Paving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>