force-app/main/default/objects/LPOE_Space_Plan__c/fields/POV_Internal_roads_Default__c.field-meta.xml
<CustomField>
    <fullName>POV_Internal_roads_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Internal roads Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>