force-app/main/default/objects/LPOE_Space_Plan__c/fields/POV_Peripheral__c.field-meta.xml
<CustomField>
    <fullName>POV_Peripheral__c</fullName>
    <defaultValue>0</defaultValue>
    <label>POV Peripheral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>