force-app/main/default/objects/LPOE_Space_Plan__c/fields/POV_Port_Size__c.field-meta.xml
<CustomField>
    <fullName>POV_Port_Size__c</fullName>
    <formula>TEXT(Project_Name__r.POV_Port_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POV Port Size</label>
    <type>Text</type>
</CustomField>