force-app/main/default/objects/LPOE_Space_Plan__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>LPOE Space Plans</relationshipLabel>
    <relationshipName>LPOE_Space_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>