force-app/main/default/objects/LPOE_Space_Plan__c/fields/Repatriation_Facility__c.field-meta.xml
<CustomField>
    <fullName>Repatriation_Facility__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Repatriation Facility</description>
    <inlineHelpText>Repatriation Facility</inlineHelpText>
    <label>Repatriation Facility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>