force-app/main/default/objects/LPOE_Space_Plan__c/fields/Repatriation_Facility_Default__c.field-meta.xml
<CustomField>
    <fullName>Repatriation_Facility_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Repatriation Facility Default</description>
    <inlineHelpText>Repatriation Facility Default</inlineHelpText>
    <label>Repatriation Facility Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>