force-app/main/default/objects/LPOE_Space_Plan__c/fields/Secondary_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Inspection__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Secondary Inspection</description>
    <inlineHelpText>Secondary Inspection</inlineHelpText>
    <label>Secondary Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>