force-app/main/default/objects/LPOE_Space_Plan__c/fields/Seizures_Vault__c.field-meta.xml
<CustomField>
    <fullName>Seizures_Vault__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Seizures Vault</description>
    <inlineHelpText>Seizures Vault</inlineHelpText>
    <label>Seizures Vault</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>