force-app/main/default/objects/LPOE_Space_Plan__c/fields/Seizures_Vault_Default__c.field-meta.xml
<CustomField>
    <fullName>Seizures_Vault_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Seizures Vault Default</description>
    <inlineHelpText>Seizures Vault Default</inlineHelpText>
    <label>Seizures Vault Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>