force-app/main/default/objects/LPOE_Space_Plan__c/fields/Site_Cir_Comm_Pedestrian_paving__c.field-meta.xml
<CustomField>
    <fullName>Site_Cir_Comm_Pedestrian_paving__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pedestrian paving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>