force-app/main/default/objects/LPOE_Space_Plan__c/fields/Site_Cir_POV_Pedestrian_paving_Default__c.field-meta.xml
<CustomField>
    <fullName>Site_Cir_POV_Pedestrian_paving_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pedestrian paving Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>