force-app/main/default/objects/LPOE_Space_Plan__c/fields/Total_GSF__c.field-meta.xml
<CustomField>
    <fullName>Total_GSF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total GSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>