force-app/main/default/objects/LPOE_Space_Plan__c/fields/Total_Site_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Site_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Site Area SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>