force-app/main/default/objects/LPOE_Space_Plan__c/fields/VACIS__c.field-meta.xml
<CustomField>
    <fullName>VACIS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>VACIS</description>
    <inlineHelpText>VACIS</inlineHelpText>
    <label>VACIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>